# dropsmith

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: launch-x-thread.md  the-prompt-was-the-disease.md
dropsmith/: __init__.py  cli.py  generator.py  listing.py  prompts.py
examples/: README.md  coastal-big-sur-travel-poster.json  generate.sh  letterpress-coffee-roaster-brand-kit.json  mid-century-palm-springs-gallery-wall.json  vintage-americana-block-party-invitation.json
skill/: SKILL.md
skill/scripts/: dropsmith
tests/: test_listing.py
