[project]
name = "dropsmith"
version = "0.1.0"
description = "Turn a niche into a listable digital product: premium AI design + marketplace listing copy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jeff Schroeder" }]
keywords = ["gemini", "ai", "etsy", "digital-products", "image-generation", "cli", "agent"]
dependencies = [
    "google-genai>=2.8.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/jschroederus/dropsmith"
Issues = "https://github.com/jschroederus/dropsmith/issues"

[project.scripts]
dropsmith = "dropsmith.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dropsmith"]
